# ImarisReader

./: CMakeLists.txt  README.md
C/: bpImageReaderC.cxx
exceptions/: bpfException.cxx  bpfException.h  bpfExceptionBase.h  bpfFileException.h  bpfFileFormatException.h  bpfFileIOException.h  bpfNoSuchSectionException.h
interface/: bpImageReader.h  bpImageReaderInterface.h  bpImarisReaderDllAPI.h  bpReaderTypes.h  bpfTypedefs.h
interfaceC/: bpImageReaderInterfaceC.h  bpReaderTypesC.h
java/JavaImarisReader/: jImarisReader.java
python/PyImarisReader/: PyImarisReader.py
reader/: bpImageReader.cxx  bpImageReaderImpl.cxx  bpImageReaderImpl.h
types/: bpfColor.cxx  bpfColor.h  bpfPackedRGBA.h  bpfParameterSection.cxx  bpfParameterSection.h  bpfSmartPtr.h  bpfTimeInfo.cxx  bpfTimeInfo.h  bpfTypes.cxx  bpfTypes.h  bpfVector3.h
utils/: bpBoostFileSystemHeader.h  bpfFileTools.cxx  bpfFileTools.h  bpfH5LZ4.cxx  bpfH5LZ4.h  bpfH5LZ4wrapper.c  bpfSysInfo.cxx  bpfSysInfo.h  bpfUtils.cxx  bpfUtils.h  utf8.h  utf8checked.h  utf8unchecked.h
